--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -2,6 +2,12 @@ node_modules
 # Keep environment variables out of version control
 .env
 
+# Database files (can be regenerated with migrations and seed)
+*.db
+*.db-journal
+*.db-wal
+*.db-shm
+
 /src/generated/prisma
 
 /src/generated/prisma
