--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "graphql": "^16.12.0",
     "lucide-react": "^0.553.0",
     "next-themes": "^0.4.6",
